2.1.1
Changed 'SessionID' in status bar to 'MsgKey'.
Added shared memory key to status bar.
Fixed moving last tab from Edit->Select Tab.
Fixed selecting tab to right when hiding tab.
Fixed tab visibility.
Fixed changing notebook colours via 3rd party app ( eg qt6ct ).
Cleaned start code.
Added trapping SIGUSR2 to output msg key and shared mem key to stderr.
Cleaned up restore session code.
Plugins now disabled by name+version.
Fixed setting visibilty of tab on loading session.
Visual changes to restore session.
Fixed reseting status bar after close/closeall.
Fixed reseting status bar after saveas.
Fixed opening bad session file.

2.1.0
Fixed mem leaks.
Force root theme when starting editor as root ( regardless of prefs, this is a visual warning only ).
Startup code tweaks.
Code clean.
Reset function menu, toolbar sensitivity etc when using restoring session and select 1st tab is set in prefs.
Fixed starting up in same workspace after force quit ( kill -SIGKILL pid ).
Reset function menu, toolbar sensitivity etc when using "selecttabbyname" message.
Reset syntax type on saveas.
Rebuild function menu on open file.
Fixed setting back/fore colours in terminal plug.
Plugin code clean.
Fixed setting doc dirty from html plug.
Fixed too many undo's/redo's.
Fixed setting doc dirty when running external tool that mods doc.
Added icons to buttons and menu items in doc browser.
Added find next/prev to doc browser.
Now show dialog when file has been changed on disk AND in editor.
Fixed pages marked erroneously as dirty when doing multi file find/replace.
Fixed setting toolbar/menus sensitive after doing find/replace.
Added custom root theme.
Fixed enabling save after redoall/undoall.
Added reload theme to tab->theme context menu.
Fixed enabling save after redo/undo.
Added custom spring theme.
Added custom grey theme.
Added custom winter theme.
Added custom wood theme.
If theme is invalid use the inbuilt default light theme.