@@ -8,5 +8,7 @@
 			<img src="context1.png" alt="context1.png" title="context.png"><br>
 			Settings:<br>
 			<img src="prefs.png" alt="prefs.png" title="prefs.png"><br>
+			If either Back colour or Fore colour are set to empty the default colours are used.<br>
+			Defaults are black on white unless overridden in any of your Xresources files.<br>
 		</body>
 </html>
